--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -66,6 +66,7 @@ blockquote + h5,
 blockquote + h6 { padding-top: 24px; }
 
 .responsive-video { width: 100%; height: auto !important; margin: 6px 0; }
+.video { @include centered-content; display:block; margin-bottom: 24px; background-color:#333; }
 
 ////////////////////////////////
 // Layout
