--- a/css/screen.css
+++ b/css/screen.css
@@ -308,14 +308,17 @@ blockquote + h2, blockquote + h3, blockquote + h4, blockquote + h5, blockquote +
 @media screen and (min-width: 624px) { .node-article .article-header datetime { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { .node-article .article-header datetime { width: 750px; } }
 .node-article .article-body { padding-bottom: 60px; }
-.node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p { margin-bottom: 1em; }
-@media screen and (max-width: 623px) { .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p { padding-left: 6px; padding-right: 6px; } }
-@media screen and (min-width: 624px) { .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p { width: 600px; margin-right: auto; margin-left: auto; } }
-@media screen and (min-width: 800px) { .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p { width: 750px; } }
+.node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p, .node-article .article-body table { margin-bottom: 1em; }
+@media screen and (max-width: 623px) { .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p, .node-article .article-body table { padding-left: 6px; padding-right: 6px; } }
+@media screen and (min-width: 624px) { .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p, .node-article .article-body table { width: 600px; margin-right: auto; margin-left: auto; } }
+@media screen and (min-width: 800px) { .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p, .node-article .article-body table { width: 750px; } }
 .node-article .article-body ul ul, .node-article .article-body ul ol, .node-article .article-body ol ol, .node-article .article-body ol ul { margin-bottom: 0; }
 .node-article .article-body ul li, .node-article .article-body ol li { margin-left: 1.2em; }
 .node-article .article-body ul { list-style: outside square; }
 .node-article .article-body ol { list-style: outside decimal; }
+.node-article .article-body table { border-bottom: 2px solid #ccc; }
+.node-article .article-body th { background-color: #ccc; }
+.node-article .article-body th, .node-article .article-body td { text-align: left; }
 .node-article .article-footer { margin: 0 -12px; }
 .node-article .article-footer .article-call-to-action { text-align: center; padding: 12px; margin-bottom: 24px; background-color: #ddd; }
 .node-article .article-footer .article-call-to-action a.primary-cta { display: block; margin: 24px auto; color: white; border-radius: 6px; width: 200px; text-decoration: none; background-color: #7db9e8; *zoom: 1; filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF7DB9E8', endColorstr='#FF1E5799'); background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #7db9e8), color-stop(50%, #2989d8), color-stop(100%, #1e5799)); background-image: -webkit-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: -moz-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: -o-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); }
