--- a/css/screen.css
+++ b/css/screen.css
@@ -228,33 +228,35 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 html { font-family: 'liberation_serifregular'; font-size: 16px; line-height: 24px; color: #333; }
 
+body { overflow-x: hidden; }
+
 h1 { font-size: 40px; line-height: 48px; margin: 6px 0; font-weight: bold; color: #000; }
-@media screen and (max-width: 623px) { h1 { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { h1 { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { h1 { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { h1 { width: 750px; } }
 
 h2 { font-size: 30px; line-height: 36px; margin: 36px 0 6px 0; font-weight: bold; color: #000; }
-@media screen and (max-width: 623px) { h2 { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { h2 { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { h2 { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { h2 { width: 750px; } }
 
 h3 { font-size: 24px; line-height: 30px; margin: 3px 0; font-weight: bold; color: #000; }
-@media screen and (max-width: 623px) { h3 { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { h3 { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { h3 { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { h3 { width: 750px; } }
 
 h4 { font-size: 20px; font-weight: bold; color: #000; }
-@media screen and (max-width: 623px) { h4 { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { h4 { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { h4 { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { h4 { width: 750px; } }
 
 h5 { font-weight: bold; color: #000; }
-@media screen and (max-width: 623px) { h5 { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { h5 { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { h5 { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { h5 { width: 750px; } }
 
 h6 { font-variant: small-caps; color: #000; }
-@media screen and (max-width: 623px) { h6 { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { h6 { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { h6 { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { h6 { width: 750px; } }
 
@@ -268,6 +270,10 @@ a:visited:hover { color: #1a1afa; }
 
 a:active { color: #f66; }
 
+ul, ol { padding-left: 30px; }
+
+ul ul, ol ol, ul ol, ol ul { padding-left: 0; }
+
 strong { font-weight: 600; }
 
 em { font-style: italic; }
@@ -279,7 +285,7 @@ datetime { color: #666; font-size: smaller; }
 code { font-family: monospace; }
 
 pre code { display: block; color: white; padding: 6px 0 6px 1em; word-wrap: break-word; white-space: pre-wrap; font-size: 14px; }
-@media screen and (max-width: 623px) { pre code { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { pre code { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { pre code { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { pre code { width: 750px; } }
 
@@ -290,7 +296,7 @@ blockquote { background-color: #ddd; padding: 24px 0 12px 0; margin-bottom: 24px
 blockquote + h2, blockquote + h3, blockquote + h4, blockquote + h5, blockquote + h6 { padding-top: 24px; }
 
 .video { display: block; margin-bottom: 24px; background-color: #333; }
-@media screen and (max-width: 623px) { .video { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { .video { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { .video { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { .video { width: 750px; } }
 
@@ -300,16 +306,16 @@ blockquote + h2, blockquote + h3, blockquote + h4, blockquote + h5, blockquote +
 
 .node-article .article-header { margin-bottom: 12px; background: black url(/img/spotlight-on-green-damask.jpg) center; }
 .node-article .article-header h1 { color: white; padding-top: 18px; margin-top: 0; }
-@media screen and (max-width: 623px) { .node-article .article-header h1 { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { .node-article .article-header h1 { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { .node-article .article-header h1 { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { .node-article .article-header h1 { width: 750px; } }
 .node-article .article-header datetime { display: block; padding-bottom: 30px; color: #eee; }
-@media screen and (max-width: 623px) { .node-article .article-header datetime { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { .node-article .article-header datetime { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { .node-article .article-header datetime { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { .node-article .article-header datetime { width: 750px; } }
 .node-article .article-body { padding-bottom: 60px; }
 .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p, .node-article .article-body table { margin-bottom: 1em; }
-@media screen and (max-width: 623px) { .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p, .node-article .article-body table { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p, .node-article .article-body table { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p, .node-article .article-body table { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { .node-article .article-body ul, .node-article .article-body ol, .node-article .article-body p, .node-article .article-body table { width: 750px; } }
 .node-article .article-body ul ul, .node-article .article-body ul ol, .node-article .article-body ol ol, .node-article .article-body ol ul { margin-bottom: 0; }
@@ -323,31 +329,29 @@ blockquote + h2, blockquote + h3, blockquote + h4, blockquote + h5, blockquote +
 .node-article .article-footer .article-call-to-action { text-align: center; padding: 12px; margin-bottom: 24px; background-color: #ddd; }
 .node-article .article-footer .article-call-to-action a.primary-cta { display: block; margin: 24px auto; color: white; border-radius: 6px; width: 200px; text-decoration: none; background-color: #7db9e8; *zoom: 1; filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF7DB9E8', endColorstr='#FF1E5799'); background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #7db9e8), color-stop(50%, #2989d8), color-stop(100%, #1e5799)); background-image: -webkit-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: -moz-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: -o-linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); background-image: linear-gradient(top, #7db9e8 0%, #2989d8 50%, #1e5799 100%); -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75); }
 .node-article .article-footer .article-call-to-action .primary-cta strong { display: block; font-size: 27px; line-height: 36px; text-shadow: 2px 2px #333; }
-.node-article .article-footer .comments { padding: 0 12px; }
-@media screen and (max-width: 623px) { .node-article .article-footer .comments { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { .node-article .article-footer .comments { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { .node-article .article-footer .comments { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { .node-article .article-footer .comments { width: 750px; } }
-.node-article .article-footer .related-content { padding: 0 12px; }
-@media screen and (max-width: 623px) { .node-article .article-footer .related-content { padding-left: 6px; padding-right: 6px; } }
-@media screen and (min-width: 624px) { .node-article .article-footer .related-content { width: 600px; margin-right: auto; margin-left: auto; } }
-@media screen and (min-width: 800px) { .node-article .article-footer .related-content { width: 750px; } }
-.node-article .article-footer .related-content ul { list-style: square outside; margin-left: 24px; }
+.node-article .article-footer .comments h2, .node-article .article-footer .comments #disqus_thread { max-width: 95%; margin-right: 15px; margin-left: 15px; }
+.node-article .article-footer #related-posts { margin-bottom: 48px; }
+@media screen and (max-width: 623px) { .node-article .article-footer #related-posts { margin-left: 6px; margin-right: 6px; } }
+@media screen and (min-width: 624px) { .node-article .article-footer #related-posts { width: 600px; margin-right: auto; margin-left: auto; } }
+@media screen and (min-width: 800px) { .node-article .article-footer #related-posts { width: 750px; } }
+.node-article .article-footer #related-posts ul { list-style: square outside; }
 
 @media screen and (min-width: 450px) { html { font-size: 20px; line-height: 30px; } }
 @media screen and (min-width: 624px) { h1 { font-size: 72px; line-height: 84px; }
   h2 { font-size: 36px; line-height: 42px; }
-  ul, ol { padding-left: 20px; }
-  ul ul, ol ol, ul ol, ol ul { padding-left: 0; }
   blockquote p { max-width: 500px; position: relative; left: 50px; }
   blockquote:before { display: block; content: "\201C"; color: #999; font-size: 10em; position: relative; top: 0.3em; }
   .node-article { padding-right: 0; padding-left: 0; } }
-@media screen and (min-width: 624px) and (max-width: 623px) { blockquote:before { padding-left: 6px; padding-right: 6px; } }
+@media screen and (min-width: 624px) and (max-width: 623px) { blockquote:before { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) and (min-width: 624px) { blockquote:before { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 624px) and (min-width: 800px) { blockquote:before { width: 750px; } }
 
 @media screen and (min-width: 800px) { ul, ol { padding-left: 50px; }
   blockquote p { max-width: 650px; } }
-@media screen and (max-width: 623px) { #home #main-content { padding-left: 6px; padding-right: 6px; } }
+@media screen and (max-width: 623px) { #home #main-content { margin-left: 6px; margin-right: 6px; } }
 @media screen and (min-width: 624px) { #home #main-content { width: 600px; margin-right: auto; margin-left: auto; } }
 @media screen and (min-width: 800px) { #home #main-content { width: 750px; } }
 #home #main-content article { margin: 30px; }
