--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,45 +1,47 @@
 ---
 layout: default
 ---
-<article class="node-article">
-  <header class="article-header">
-    <h1>{{ page.title }}</h1>
-    <datetime>Written on {{ page.date | date_to_string }}</datetime>
-    {% if page.thumbnail %}
-      <img src="{{ page.thumbnail }}" class="article-image" />
-    {% endif %}
-  </header>
+<section id="main-content">
+  <article class="node-article">
+    <header class="article-header">
+      <h1>{{ page.title }}</h1>
+      <datetime>Written on {{ page.date | date_to_string }}</datetime>
+      {% if page.thumbnail %}
+        <img src="{{ page.thumbnail }}" class="article-image" />
+      {% endif %}
+    </header>
 
-  <div class="article-body">
-  {{ content }}
-  </div>
-
-  <footer class="article-footer">
-    <div class="article-call-to-action">
-      <p>Was it good for you? Great! Please</p>
-      
-      <a href="https://twitter.com/BryceAdamFisher/" class="primary-cta">
-        <strong>Follow Me!</strong>
-        on twitter
-      </a>
-      
-      <p>or <a href="/feed.xml" class="secondary-cta">RSS</a> to read my next post <strong>first!</strong></p>
-    </div>
-    <div id="related-posts">
-      <h2>What to Read Next</h2>
-      <ul>
-        {% for post in site.related_posts limit:3 %}
-          <li>
-            <a href="{{ post.url }}">{{ post.title }}</a>
-          </li>
-        {% endfor %}
-      </ul>
+    <div class="article-body">
+    {{ content }}
     </div>
 
-    <div class="comments">
-      <h2>Discuss</h2>
-      <div id="disqus_thread"></div>
-      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript>
-    </div>
-  </footer>
-</article>
+    <footer class="article-footer">
+      <div class="article-call-to-action">
+        <p>Was it good for you? Great! Please</p>
+        
+        <a href="https://twitter.com/BryceAdamFisher/" class="primary-cta">
+          <strong>Follow Me!</strong>
+          on twitter
+        </a>
+        
+        <p>or <a href="/feed.xml" class="secondary-cta">RSS</a> to read my next post <strong>first!</strong></p>
+      </div>
+      <div id="related-posts">
+        <h2>What to Read Next</h2>
+        <ul>
+          {% for post in site.related_posts limit:3 %}
+            <li>
+              <a href="{{ post.url }}">{{ post.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+
+      <div class="comments">
+        <h2>Discuss</h2>
+        <div id="disqus_thread"></div>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript>
+      </div>
+    </footer>
+  </article>
+</section>
