--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,7 @@
 
   {{content}}
 
-  <footer id="site-footer">
-  </footer>
+  <footer id="site-footer"> </footer>
 
   <script src="/js/blog.js"></script>
 </body>
