--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -69,7 +69,7 @@ blockquote + h4,
 blockquote + h5,
 blockquote + h6 { padding-top: 24px; }
 
-.video { @include centered-content; display:block; margin-bottom: 24px; background-color:#333; }
+video, .video { @include centered-content; display:block; margin-bottom: 24px; background-color:#333; }
 .responsive-image {
 	display: inline;
 	img { display: block; width: 100%; height: auto !important; }
