(nit) reword disqus noscript

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ layout: default
       <div class="comments">
         <h2>Discuss</h2>
         <div id="disqus_thread"></div>
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript>
+        <noscript>If you'd like to view the comments, please <a href="http://disqus.com/?ref_noscript">enable JavaScript</a>.</noscript>
       </div>
     </footer>
   </article>
