--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>{% if paginator and paginator.page > 1 %}Posts Page {{ paginator.page }}{% else %}{{ page.title }}{% endif %} | Bryce Fisher-Fleig</title>
-  
+
   <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/css/print.css" media="print" rel="stylesheet" type="text/css">
   <!--[if IE]>
       <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
   <link href="/favicon.ico" rel="shortcut icon">
-  
+
   <link rel="dns-prefetch" href="//ssl.google-analytics.com">
   <link rel="dns-prefetch" href="//brycefisherfleig-blog.disqus.com">
   <meta name="viewport" content="width=device-width, user-scalable=no">
@@ -21,11 +21,15 @@
   <nav id="header">
     <a href="/" id="logo"><img src="/img/logo.png" alt="B" /></a>
     <h2 id="site-title">Bryce Fisher-Fleig</h2>
+
+    <a id="flattr-header" href="https://flattr.com/submit/auto?user_id=brycefisherfleig&url=https%3A%2F%2Fbryce.fisher-fleig.org{{ page.url | uri_escape }}"><img src="//api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></a>
   </nav>
 
   {{content}}
 
-  <footer id="site-footer"> </footer>
+  <footer id="site-footer">
+    <a id="flattr-footer" href="https://flattr.com/submit/auto?user_id=brycefisherfleig&url=https%3A%2F%2Fbryce.fisher-fleig.org{{ page.url | uri_escape }}"><img src="//api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></a>
+  </footer>
 
   <script src="/js/blog.js"></script>
 </body>
