(fix) self host flattr icon
For some reason the img url provided by flattr stopped woring for
my blog. Self-hosting seems to solve the problem :-)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,13 +22,13 @@
     <a href="/" id="logo"><img src="/img/logo.png" alt="B" /></a>
     <h2 id="site-title">Bryce Fisher-Fleig</h2>
 
-    <a id="flattr-header" href="https://flattr.com/submit/auto?user_id=brycefisherfleig&amp;title={{ page.title | uri_escape }}&amp;url=https%3A%2F%2Fbryce.fisher-fleig.org{{ page.url | uri_escape }}"><img src="//api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this"></a>
+    <a id="flattr-header" href="https://flattr.com/submit/auto?user_id=brycefisherfleig&amp;title={{ page.title | uri_escape }}&amp;url=https%3A%2F%2Fbryce.fisher-fleig.org{{ page.url | uri_escape }}"><img src="/img/flattr-badge-large.png" alt="Flattr this"></a>
   </nav>
 
   {{content}}
 
   <footer id="site-footer">
-    <a id="flattr-footer" href="https://flattr.com/submit/auto?user_id=brycefisherfleig&amp;title={{ page.title | uri_escape }}&amp;url=https%3A%2F%2Fbryce.fisher-fleig.org{{ page.url | uri_escape }}"><img src="//api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this"></a>
+    <a id="flattr-footer" href="https://flattr.com/submit/auto?user_id=brycefisherfleig&amp;title={{ page.title | uri_escape }}&amp;url=https%3A%2F%2Fbryce.fisher-fleig.org{{ page.url | uri_escape }}"><img src="/img/flattr-badge-large.png" alt="Flattr this" title="Flattr this"></a>
   </footer>
 
   <script src="/js/blog.js"></script>
