--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -65,9 +65,9 @@ strong { font-weight: 600; }
 em { font-style: italic; }
 datetime { color:$dark-grey; font-size:smaller; }
 
-.highlight { background-color: $dark-grey; margin-bottom: 24px; }
+.highlight { background-color: black; margin-bottom: 42px; margin-top: 42px; padding: 24px 0; }
 code { font-family: monospace; }
-pre code { @include centered-content; display: block; color: white; padding: 6px 0 6px 1em; word-wrap: break-word; white-space: pre-wrap; font-size: 14px; }
+pre code { @include centered-content; display: block; color: white; padding: 6px 0 6px 1em; word-wrap: break-word; white-space: pre-wrap; font-size: 18px; }
 li code, p code { color:#aaa; }
 
 blockquote { background-color: $light-grey; padding:24px 0 12px 0; margin-bottom:24px; }
@@ -98,7 +98,7 @@ video, .video, .video .vjs-tech { display:block; position:static; @include cente
 
 // Site Header
 #header, #site-footer {
-  background: url('../img/header.jpg') repeat-x; height: 36px;
+  height: 36px; background: url('../img/header.jpg') repeat-x;
 
   #logo img { height: 24px; width: auto; margin: 6px; float: left; }
   p, h2#site-title { margin: 0; color: white; text-shadow: 1px 1px black; width: auto; }
@@ -117,7 +117,7 @@ video, .video, .video .vjs-tech { display:block; position:static; @include cente
 .node-article {
 
   .article-header {
-    margin:24px 0 12px; background: black url(/img/spotlight-on-green-damask.jpg) fixed bottom;
+    margin:24px 0 12px; background: black;
 
     h1 { @include centered-content; color:white; padding-top: 18px; margin-top:0; }
     datetime { display: block; @include centered-content; padding-bottom: 30px; color: $light-grey; }
@@ -180,7 +180,7 @@ video, .video, .video .vjs-tech { display:block; position:static; @include cente
   h1 { font-size:60px; line-height:72px; }
 
   #site-mission {
-    margin-top: 24px; padding:12px 0; background: black url(/img/spotlight-on-green-damask.jpg) fixed bottom;
+    margin-top: 24px; padding:12px 0; background: black;
     h1, p { color:white; @include centered-content; }
   }
 
@@ -206,22 +206,23 @@ video, .video, .video .vjs-tech { display:block; position:static; @include cente
 ///////////////////////////
 // Media Queries
 @media screen and (min-width: 450px) {
-  html { font-size: 20px; line-height: 30px; }
+  html { font-size: 24px; line-height: 42px; }
   #flattr-header { display:block; }
 }
 @media screen and (min-width: 624px) {
-	h1 { font-size: 72px; line-height: 84px; }
-	h2 { font-size: 36px; line-height: 42px; }
+  h1 { font-size: 72px; line-height: 84px; }
+  h2 { font-size: 60px; line-height: 84px; margin: 30px inherit 60px inherit; }
+  h3 { font-size: 36px; line-height: 60px;}
   #home h1 { font-size:108px; line-height: 126px; }
 
-	blockquote p { max-width: 500px; position: relative; left: 50px; }
-	blockquote:before { display:block; @include centered-content; content:"\201C"; color:#999; font-size:10em; position:relative; top:0.3em; }
+  blockquote p { max-width: 500px; position: relative; left: 50px; }
+  blockquote:before { display:block; @include centered-content; content:"\201C"; color:#999; font-size:10em; position:relative; top:0.3em; }
 
-	.node-article { padding-right:0; padding-left:0; }
+  .node-article { padding-right:0; padding-left:0; }
 }
 @media screen and (min-width: 800px) {
   ul, ol { padding-left: 50px; }
   blockquote p { max-width: 650px; }
   .scroll { overflow:auto; }
-  .article-body p:first-of-type { font-size: 26px; line-height:40px; margin-top: 40px; margin-bottom: 40px; }
+  .article-body p:first-of-type { font-size: 30px; line-height:48px; margin-top: 40px; margin-bottom: 40px; }
 }
