Text-shadow animations for links

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,8 +5,10 @@ $dark-grey: #333;
 $light-grey: #ddd;
 $off-white: #efefef;
 $primary-blue: #f66;
+$light-blue: #1a1af1;
 
 // Typography
 $text-color: $dark-grey;
-$link-color: $primary-blue;
+$link-color: $light-blue;
+$active-link-color: $primary-blue;
 $header-color: #000;
