--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -52,11 +52,11 @@ h4 { @include heading; font-size: 20px; }
 h5 { @include heading; }
 h6 { @include heading; font-weight:normal; font-variant: small-caps; }
 
-a { text-decoration: none; color: #1a1afa; }
-a:link:hover, a:hover { color: #4c4cfa; }
+a { text-decoration: none; color: $link-color; transition-property:all; transition-duration:750ms;}
+a:link:hover, a:hover { text-shadow:5px 10px 20px; }
 a:visited { color: #4c4cfa; }
-a:visited:hover { color: #1a1afa; }
-a:active { color: $link-color; }
+a:visited:hover { color: $link-color; }
+a:active { color: $active-link-color; }
 
 ul, ol { padding-left: 30px; }
 ul ul, ol ol, ul ol, ol ul { padding-left: 0; }
@@ -187,7 +187,7 @@ video, .video, .video .vjs-tech { display:block; position:static; @include cente
   #main-content { @include centered-content;}
   .article-header { background:none; }
   .node-article { transition-property:all; transition-duration:750ms; }
-  .node-article:hover { background-color:$light-grey; }
+  .node-article:hover { text-shadow: 5px 10px 20px; }
   article { margin: 30px 0; }
   datetime { padding-bottom: 0; color:#999; }
   .pagination { margin: 60px auto 0 auto; }
